--- a/modules/programs/ghostty/config
+++ b/modules/programs/ghostty/config
@@ -5,7 +5,7 @@ font-size = 11
 # Window appearance
 window-padding-x = 8
 window-padding-y = 4
-background-opacity = 0.85
+background-opacity = 0.8
 background-blur = true
 confirm-close-surface = false
 
@@ -18,53 +18,33 @@ selection-foreground = #11111b
 selection-background = #73c936
 
 # Normal colors (black, red, green, yellow, blue, magenta, cyan, white)
-palette = 1c1c28 ff3c3c 73c936 ff7f00 00bfff ff1493 03fff7 f0c674
+palette = 0=#1c1c28
+palette = 1=#ff3c3c
+palette = 2=#73c936
+palette = 3=#ff7f00
+palette = 4=#00bfff
+palette = 5=#ff1493
+palette = 6=#03fff7
+palette = 7=#f0c674
 # Bright colors (bright black, red, green, yellow, blue, magenta, cyan, white)
-palette = 384048 ff6c6c 96ff4c ffa74d 48d1ff ff69b4 43fff8 ffffd4
-
-# Tab bar
-tab-bar = true
-tab-bar-position = bottom
-
-# Cursor
-cursor = block
-cursor-blink-rate = 500
-
-# Performance and rendering options
-gpu-acceleration = true
-
-# Ghostty-specific features
-scrollback-lines = 10000
-shell-integration-features = cursor,sudo
-sixel = true
-kitty-keyboard-protocol = true
-kitty-graphics-protocol = true
-
-# Advanced rendering features
-antialiasing = true
-
-# Ligatures and Unicode
-font-feature = liga
-font-feature = calt
+palette = 8=#384048
+palette = 9=#ff6c6c
+palette = 10=#96ff4c
+palette = 11=#ffa74d
+palette = 12=#48d1ff
+palette = 13=#ff69b4
+palette = 14=#43fff8
+palette = 15=#ffffd4
 
 # Mouse settings
 mouse-hide-while-typing = true
-copy-on-select = clipboard
-
-# Terminal bells
-bell = none
-bell-flash = false
-visual-bell = true
 
 # Window features
-window-decorations = false
 window-inherit-working-directory = true
 
 # Match Kitty keybindings
 keybind = ctrl+shift+c=copy_to_clipboard
 keybind = ctrl+shift+v=paste_from_clipboard
-keybind = ctrl+shift+plus=increase_font_size
-keybind = ctrl+shift+minus=decrease_font_size
 keybind = ctrl+shift+backspace=reset_font_size
 keybind = ctrl+shift+t=new_tab
 keybind = ctrl+shift+q=close_surface
@@ -75,5 +55,5 @@ keybind = ctrl+shift+,=move_tab:-1
 
 # Additional Ghostty-specific keybindings
 keybind = ctrl+shift+f=toggle_fullscreen
-keybind = ctrl+shift+o=toggle_opacity
+# keybind = ctrl+shift+o=toggle_opacity  # Removing due to invalid action
 keybind = ctrl+shift+r=reload_config 
